<resources>
    <string name="app_name">Ring &amp; Find</string>
    <string name="notification">Your phone is on RING mode!</string>
    <string name="toast">Touch the screen to shut the ringring</string>
    <string name="hello_world">Hello world!</string>
    <string name="intro_title">Introduction:</string>
    <string name="anyone">Receive ringring SMS from any Phone number
    </string>
    <string name="one_only">Receive ringring SMS only from:
    </string>
        <string name="my_country">My country:
    </string>
    <string name="phone_number">Phone Number
    </string>
    <string name="get_number">Get number from contacts
    </string>
    <string name="Power_OFF">Power OFF
    </string>
    <string name="Power_ON">Power ON
    </string>
    <string name="only_ring_mode">Turns back the sound after receiving ringring SMS
    </string>
    <string name="make_phone_ring">Make it ring after receiving ringring SMS
    </string>
    <string name="intro2">
        If you can\'t find your phone,
        and it\'s on silent or vibrate mode, all you have to do is send a message with the word
        \"ringring\". Once the message is received,
        the sound automatically turns back on. Now your phone will ring when you call it.
    </string>
    <string name="action_settings">Settings</string>
        <string name="item_picker">Select an item</string>
        <string-array name="item_array">
            <item>AFG</item>
            <item>ALB</item>
            <item>DZA</item>
            <item>ASM</item>
            <item>AND</item>
            <item>AGO</item>
            <item>AIA</item>
            <item>ATA</item>
            <item>ATG</item>
            <item>ARG</item>
            <item>ARM</item>
            <item>ABW</item>
            <item>AUS</item>
            <item>AUT</item>
            <item>AZE</item>
            <item>BHS</item>
            <item>BHR</item>
            <item>BGD</item>
            <item>BRB</item>
            <item>BLR</item>
            <item>BEL</item>
            <item>BLZ</item>
            <item>BEN</item>
            <item>BMU</item>
            <item>BTN</item>
            <item>BOL</item>
            <item>BIH</item>
            <item>BWA</item>
            <item>BRA</item>
            <item>IOT</item>
            <item>VGB</item>
            <item>BRN</item>
            <item>BGR</item>
            <item>BFA</item>
            <item>BDI</item>
            <item>KHM</item>
            <item>CMR</item>
            <item>CAN</item>
            <item>CPV</item>
            <item>CYM</item>
            <item>CAF</item>
            <item>TCD</item>
            <item>CHL</item>
            <item>CHN</item>
            <item>CXR</item>
            <item>CCK</item>
            <item>COL</item>
            <item>COM</item>
            <item>COK</item>
            <item>CRI</item>
            <item>HRV</item>
            <item>CUB</item>
            <item>CUW</item>
            <item>CYP</item>
            <item>CZE</item>
            <item>COD</item>
            <item>DNK</item>
            <item>DJI</item>
            <item>DMA</item>
            <item>DOM</item>
            <item>TLS</item>
            <item>ECU</item>
            <item>EGY</item>
            <item>SLV</item>
            <item>GNQ</item>
            <item>ERI</item>
            <item>EST</item>
            <item>ETH</item>
            <item>FLK</item>
            <item>FRO</item>
            <item>FJI</item>
            <item>FIN</item>
            <item>FRA</item>
            <item>PYF</item>
            <item>GAB</item>
            <item>GMB</item>
            <item>GEO</item>
            <item>DEU</item>
            <item>GHA</item>
            <item>GIB</item>
            <item>GRC</item>
            <item>GRL</item>
            <item>GRD</item>
            <item>GUM</item>
            <item>GTM</item>
            <item>GGY</item>
            <item>GIN</item>
            <item>GNB</item>
            <item>GUY</item>
            <item>HTI</item>
            <item>HND</item>
            <item>HKG</item>
            <item>HUN</item>
            <item>ISL</item>
            <item>IND</item>
            <item>IDN</item>
            <item>IRN</item>
            <item>IRQ</item>
            <item>IRL</item>
            <item>IMN</item>
            <item>ISR</item>
            <item>ITA</item>
            <item>CIV</item>
            <item>JAM</item>
            <item>JPN</item>
            <item>JEY</item>
            <item>JOR</item>
            <item>KAZ</item>
            <item>KEN</item>
            <item>KIR</item>
            <item>XKX</item>
            <item>KWT</item>
            <item>KGZ</item>
            <item>LAO</item>
            <item>LVA</item>
            <item>LBN</item>
            <item>LSO</item>
            <item>LBR</item>
            <item>LBY</item>
            <item>LIE</item>
            <item>LTU</item>
            <item>LUX</item>
            <item>MAC</item>
            <item>MKD</item>
            <item>MDG</item>
            <item>MWI</item>
            <item>MYS</item>
            <item>MDV</item>
            <item>MLI</item>
            <item>MLT</item>
            <item>MHL</item>
            <item>MRT</item>
            <item>MUS</item>
            <item>MYT</item>
            <item>MEX</item>
            <item>FSM</item>
            <item>MDA</item>
            <item>MCO</item>
            <item>MNG</item>
            <item>MNE</item>
            <item>MSR</item>
            <item>MAR</item>
            <item>MOZ</item>
            <item>MMR</item>
            <item>NAM</item>
            <item>NRU</item>
            <item>NPL</item>
            <item>NLD</item>
            <item>ANT</item>
            <item>NCL</item>
            <item>NZL</item>
            <item>NIC</item>
            <item>NER</item>
            <item>NGA</item>
            <item>NIU</item>
            <item>PRK</item>
            <item>MNP</item>
            <item>NOR</item>
            <item>OMN</item>
            <item>PAK</item>
            <item>PLW</item>
            <item>PSE</item>
            <item>PAN</item>
            <item>PNG</item>
            <item>PRY</item>
            <item>PER</item>
            <item>PHL</item>
            <item>PCN</item>
            <item>POL</item>
            <item>PRT</item>
            <item>PRI</item>
            <item>QAT</item>
            <item>COG</item>
            <item>REU</item>
            <item>ROU</item>
            <item>RUS</item>
            <item>RWA</item>
            <item>BLM</item>
            <item>SHN</item>
            <item>KNA</item>
            <item>LCA</item>
            <item>MAF</item>
            <item>SPM</item>
            <item>VCT</item>
            <item>WSM</item>
            <item>SMR</item>
            <item>STP</item>
            <item>SAU</item>
            <item>SEN</item>
            <item>SRB</item>
            <item>SYC</item>
            <item>SLE</item>
            <item>SGP</item>
            <item>SXM</item>
            <item>SVK</item>
            <item>SVN</item>
            <item>SLB</item>
            <item>SOM</item>
            <item>ZAF</item>
            <item>KOR</item>
            <item>SSD</item>
            <item>ESP</item>
            <item>LKA</item>
            <item>SDN</item>
            <item>SUR</item>
            <item>SJM</item>
            <item>SWZ</item>
            <item>SWE</item>
            <item>CHE</item>
            <item>SYR</item>
            <item>TWN</item>
            <item>TJK</item>
            <item>TZA</item>
            <item>THA</item>
            <item>TGO</item>
            <item>TKL</item>
            <item>TON</item>
            <item>TTO</item>
            <item>TUN</item>
            <item>TUR</item>
            <item>TKM</item>
            <item>TCA</item>
            <item>TUV</item>
            <item>VIR</item>
            <item>UGA</item>
            <item>UKR</item>
            <item>ARE</item>
            <item>GBR</item>
            <item>USA</item>
            <item>URY</item>
            <item>UZB</item>
            <item>VUT</item>
            <item>VAT</item>
            <item>VEN</item>
            <item>VNM</item>
            <item>WLF</item>
            <item>ESH</item>
            <item>YEM</item>
            <item>ZMB</item>
            <item>ZWE</item>
        </string-array>
</resources>